csss/styles.css
*{
    box-sizing: border-box;
}
ion-icon {
    font-size: 40px;
    color: black;
}
body {
    background-color: #E5E5E5;
    font-family: 'Roboto', sans-serif;
}
strong {
    font-weight: bold;
}


.screenOfName{
    width: 100%;
    height: 100%;
    background: white;

    display: flex;
    flex-direction: column;
    align-items: center;

    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
}
.screenOfName img{
    width: 130px;
    height: 92px;
    margin-top: 72px;
    margin-bottom: 92px;
}
.screenOfName input {
    width: 261px;
    height: 54px;
    background: #FFFFFF;
    border: 1px solid #D7D7D7;
    border-radius: 4px;
    margin-bottom: 15px;

    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 25px;
    /* or 139% */
    color: #AEAEAE;

    text-align: center;
}
.screenOfName input::placeholder{
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 25px;
    /* or 139% */
    color: #AEAEAE;

    text-align: center;
}
.button {
    width: 109px;
    height: 45px;
    background: #E7E7E7;
    border-radius: 9px;

    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 25px;
    /* or 139% */
    color: #696969;

    display: flex;
    align-items: center;
    justify-content: center;
}


header {
    height: 80px;
    width: 100%;
    padding: 0 22px;
    background: #FFFFFF;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);

    display: flex;
    justify-content: space-between;
    align-items: center;

    position: fixed;
    top: 0;
    left: 0;
}
img {
    width: 75px;
    height: 53px;
}


.chooseAPerson {
    width: 100vw;
    height: 100vh;

    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;

    display: flex;
}
.chooseAPerson ion-icon {
    font-size: 23px;
}
.blackScreen{
    width: 30%;
    background: rgba(0, 0, 0, 0.6);
}
.rightSide{
    width: 100%;

    background: #FFFFFF;
    padding: 0 25px;

    display: flex;
    flex-direction: column;
    /* align-items: center; */
}
.chooseAPerson span {
    font-style: normal;
    font-weight: bold;
    font-size: 16px;
    line-height: 19px;
    text-align: center;
    color: #000000;

    margin: 25px 0;
}
.line {
    margin-bottom: 10px;

    display: flex;
    align-items: center;

    transition: all 1s;
}
.line h1{
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 19px;
    display: flex;
    align-items: center;
    color: #000000;
}
.withoutCheck {
    width: 190px;

    display: flex;
    align-items: center;
    gap: 10px;

    overflow: hidden;              
    text-overflow:    ellipsis;
}
.check {
    color: green;
}


main{
    margin: 105px 0;
}
.message {
    height: 40px;
    padding: 0 8px;
    border-radius: 2px;
    margin-bottom: 5px;

    display: flex;
    align-items: center;

    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 16px;
}
.normalMessage {
    background: white;
}
.directMessage {
    background-color: #FFDEDE;
}
.movimentMessage {
    background-color: #DCDCDC;
}
.time {
    margin-right: 10px;
}


footer {
    height: 80px;
    width: 100%;
    padding: 0 20px;
    background: #FFFFFF;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);

    display: flex;
    justify-content: space-between;
    align-items: center;

    position: fixed;
    bottom: 0;
    left: 0;
}
input {
    width: 80%;
    height: 80%;
    border: none;

    font-style: italic;
    font-weight: normal;
    font-size: 18px;
    line-height: 21px;
    color: #000000;
}
input::placeholder {
    font-style: italic;
    font-weight: normal;
    font-size: 18px;
    line-height: 21px;
    color: #000000;
}

.vanishDisplay{
    display: none;
}
.deniedCheck{
    background-color: red;
}

